# AtlasEngine

.github/workflows/: build.yml
Engine/: CMakeLists.txt
Engine/src/: main.cpp
Engine/src/core/: Engine.cpp  Engine.h
Engine/src/core/graphics/: renderer.cpp  renderer.h
